[MG] is Mike Griffiths, a PennMUSH developer (aka Talvo)
[3] refers to code by (or inspired by) TinyMUSH 3.0
[MUX] refers to code by (or inspired by) TinyMUX 2.x
[Rhost] refers to code by (or inspired by) RhostMUSH

==========================================================================

Version 1.8.5 patchlevel 4                                 ??? ??, 201?

Commands:
 * @dolist now accepts /inline and related switches, like @switch does.
   Suggested by Reaver. [MG]

Functions:
 * lpids()' second argument has been altered slightly, to allow you to list
   the pids for one specific object only. Suggested by spork. [MG]
 * The "player" field in pidinfo() has been renamed for "executor", for
   clarity. "player" still works for backwards compatability. From a request
   by tsen. [MG]
 
Minor changes:
 * ansi() now accepts a space-separated list of color codes, with later
   groups overriding earlier ones. Allows you to specify basic ANSI codes
   after XTERM color codes. Suggested by spork, [Rhost]. [MG]
 * The QUIET flag now suppresses deprecated command/function messages.
   Suggested by Paige. [MG]
 * Compiler warning fixed by ChaosMageX.
 * Help fixes. [MG]

Fixes:
 * %c contained the evaluated input (the same as %u), instead of the
   unevaluated input. Reported by Ingwaz. [MG]
 * repeat() could write partial ANSI tags, causing buffer overflows. From a
   report by Ashen-Shugar. [MG]

Version 1.8.5 patchlevel 3                                 Aug 23, 2012

Fixes:
 * Fix a crash bug in new color code. Discovered by ChaosMageX, fixed by
   Intrevis and [SW].

Functions:
 * name() with no arguments is now an error. It should always have been, but
   previously returned nothing for backwards compatability. If you still have
   code that relies on that behaviour, you are extremely lazy and should be
   ashamed of yourself. [MG]

Version 1.8.5 patchlevel 2                                 Aug 18, 2012

Hardcode: