@@ -13,6 +13,12 @@ be read in 'help patchlevels'.
 
 Version 1.8.5 patchlevel 4                                 ??? ??, 201?
 
+Major changes:
+ * The player_name_len @config option is now the maximum length of a player
+   name, instead of the maximum length+1, because doing it that way was
+   rather silly. You may wish to lower yours by 1 now to compensate.
+   Suggested by Mercutio. [MG]
+
 Commands:
  * @dolist now accepts /inline and related switches, like @switch does.
    Suggested by Reaver. [MG]
